--- a/file.html
+++ b/file.html
@@ -6,7 +6,7 @@
     <style>
         body {
 
-            background-image: url(assets/Picture\ of\ me\ and\ Louis.png);
+            background-image: url("assets/Picture\ of\ me\ and\ Louis.png");
         }
     </style>
 </head>
